# VS-Code-Web-Replica

./: .replit  API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  KILOCODE_INTEGRATION.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  index.html  package.json  pnpm-lock.yaml  start-backend.sh  worklog.md
.agents/memory/: MEMORY.md  vscode-web.md
.github/workflows/: deploy-pages.yml  update-kilocode.yml
agent-ctx/: 4-sandbox-service.md  5-search-service.md  6-copilot-agent.md  responsive-design-agent.md
backend/sandbox/: go.mod  (+2 more)
backend/search/: .dockerignore  Cargo.toml  Dockerfile  Makefile
backend/search/src/: api.rs  indexer.rs  main.rs  searcher.rs  trie.rs
download/: api_server_dir.json  artifacts_dir.json  comp_dir.json  index_html.json  layout_dir.json  lib_dir.json  pages_dir.json  panel_dir.json  pkg.json  readme.json  replit_md.json  repo_api.json  repo_contents.json  repo_info.json  scripts_dir.json  sidebar_dir.json  src_dir.json  store_dir.json  terminal_dir.json  vite_config.json  vscode_pkg.json  vscode_web_dir.json
tool-results/: bash_1781347233093_4ce94289b8fc.txt  grep_1781375203419_e4445ccb5c0b.txt  read_1781344673653_e2a202b4c688.txt  read_1781368417015_3b1dafcfc974.txt  read_1781413325990_9414ae285131.txt  read_1781413351667_849e98b35ebf.txt  read_1781413398547_a34da0dba087.txt  read_1781413657185_ede2dae72cc0.txt
tool-results-bak/: bash_1781348392498_701fb006be76.txt  read_1781368416735_a7d4c4166e6e.txt  read_1781368417298_d23cb1705180.txt  read_1781368602535_d3c3bee07738.txt  read_1781368675912_d077f5e054b7.txt
(+125 files in other folders)
